--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.js"></script>
     <script src="sketch.js"></script>
     <link rel="stylesheet" href="main.css" />
-    <title>Document</title>
+    <title>PunchStats</title>
   </head>
   <body>
     <script></script>
